<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidNxtDistanceTracker</string>
    <string name="title_section1">Main</string>
    <string name="title_section2">Logs</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_main">Hello main!</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="exit">Exit</string>
    <string name="distance_label">Distance:</string>
    <string name="action_settings">Settings</string>

</resources>
